# s3rsync

./: .gitignore  Cargo.toml  diesel.toml  flake.nix  notes.md
migrations/2025-03-13-000421_create_document/: down.sql  up.sql
src/: main.rs  models.rs  rust_out  schema.rs
