[package]
name = "rsyncer"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = { version = "1.6.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.79.0"
derive_more = { version = "2.0.1", features = ["full"] }
diesel = { version = "2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15.7"
tokio = { version = "1.44.0", features = ["full"] }
